# LLM_Learning_RAG_RL

./: .gitignore  AGENTS.md  LLM_Study_Agent_Instructions.txt  MedRAG_STUDY_PLAN.md  STUDY_PROGRESS.md
R2RAG/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.lite  README.md  README_zh.md  pyproject.toml
R2RAG/.github/workflows/: README.md  build-and-push-ecr.yml
R2RAG/cloud/ec2_profiles/: ec2_bedrock.yaml
R2RAG/cloud/lite_server/: docker-compose.yaml
R2RAG/cloud/openai_server/: docker-compose.yaml
R2RAG/cloud/rag_server_proxy/: README.md  ec2-management-role.yaml
R2RAG/scripts/: README.md  add_query_to_reference.py  evaluate.py  local_test.py  plot_comparison.py  proxy.py  run.py  run_ase_study_topics.py  run_datasets.sh  run_remote.py  run_retrieval.py  setup_deepresearch.sh  test_brave_answers.py  test_brightdata.py  test_brightdata_benchmark.py  test_brightdata_browser_api.py  test_reranker_transformers.md  test_reranker_transformers.py  test_reranker_vllm.py
R2RAG/scripts/add_qa_entry/: README.md  add_qa_entry.py
R2RAG/scripts/notebooks/: feedbacks_analysis.py  feedbacks_analysis_activity.txt  feedbacks_analysis_full.txt  spacy_layout_test.py  test_crawl4ai.py  test_jina.py  test_qwen_llm_classifier.py  test_qwen_rerank_as_classifier.py
R2RAG/src/apis/: README.md  combined_app.py  lite_router.py  mmu_rag_router.py  openai_router.py  openai_typings.py  runpod_handler.py  warmup.py
R2RAG/src/evaluators/: README.md  __init__.py  evaluator_interface.py
R2RAG/src/systems/: rag_interface.py
R2RAG/src/tools/: aws_tools.py  brave_answers.py  brave_llm_context.py  brave_search.py  cache_lru.py  chunker.py  classes.py  docs_utils.py  generator.py  jina_retriever.py  loaders.py  logging_utils.py  lse_search.py  path_utils.py  posthog_client.py  posthog_utils.py  reranker_vllm.py  retriever.py  retry_utils.py  str_utils.py  tokenizer.py  web_search.py
(+79 files in other folders)
